tests/baselines/reference/staticClassMemberError.errors.txt
==== tests/cases/compiler/staticClassMemberError.ts (3 errors) ====
    class C {
        static s;
        public a() {
            s = 1;
      ~
!!! staticClassMemberError.ts(4,3): error TS2095: Could not find symbol 's'.
        }
    }
    
    // just want to make sure this one doesn't crash the compiler
    function Foo();
    class Foo {
    ~~~~~
!!! staticClassMemberError.ts(10,1): error TS1041: Function implementation expected.
          ~~~
!!! staticClassMemberError.ts(10,7): error TS2000: Duplicate identifier 'Foo'. Additional locations:
!!! 	staticClassMemberError.ts(9,1)
     static bar;
    }